# CheLang

./: .gitignore  LICENSE  README.md  changelog  cheLang.py  chePibe.py  cli.py  example.che  example2.che  fibonacci.che  setup.cfg  shell.py  yarara
.github/: FUNDING.yml
CheLang/: BuiltInConst.py  Const.py  Context.py  Errors.py  Interpreter.py  Lexer.py  Nodes.py  Parser.py  ParserResult.py  Position.py  RTResult.py  SymbolTable.py  Tokens.py  Values.py  cheLangCompiler.py
examples/: Argentina.che  Chorro.che  example.che  fibonacci.che  fizz_buzz.che  generala.che  interseccion_listas.che  numeros_bokita.che  primos.che
src/chelang/: __main__.py
src/chelang/compiler/: BuiltInConst.py  Const.py  Errors.py  Interpreter.py  Lexer.py  Nodes.py  Parser.py  Tokens.py  Values.py  cheLangCompiler.py  stringsWithArrows.py
src/chelang/compiler/assets/: CheLangIcon.icns
