[metadata]
name = chelang-frankdilu
version = 0.0.1
author = Franco Di Luciano
author_email = francodilu@gmail.com
description = CheLang
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/frankdilu/CheLang
project_urls =
    Bug Tracker = https://github.com/frankdilu/CheLang/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    playsound

[options.package_data]
chelang.compiler = assets/*.jpg, assets/*.icns, assets/*.ico, assets/*.mp3

[options.packages.find]
where = src
